Removed useless clutter

--- a/Flipkart_try_1.ipynb
+++ b/Flipkart_try_1.ipynb
@@ -162,9 +162,11 @@
         "                  \n",
         "                  path=row[0];\n",
         "                try:\n",
+        "                  path=path2+path;\n",
+        "                  filename=path\n",
         "                  im = Image.load(filename)\n",
-        "                  im.verify() #I perform also verify, don't know if he sees other types o defects\n",
-        "                  im.close() #reload is necessary in my case\n",
+        "                  im.verify() \n",
+        "                  im.close() \n",
         "                  im = Image.load(filename) \n",
         "                  im.transpose(PIL.Image.FLIP_LEFT_RIGHT)\n",
         "                  im.close()\n",
@@ -175,7 +177,7 @@
         "                  x1=int(row[2]);\n",
         "                  y0=int(row[3])\n",
         "                  y1=int(row[4]);\n",
-        "                  path=path2+path;\n",
+        "                  #path=path2+path;\n",
         "                 # path,x0, y0, x1, y1, _, _ = row\n",
         "                 # print(index)\n",
         "                  img = cv2.imread(path, cv2.IMREAD_UNCHANGED)\n",
@@ -404,7 +406,7 @@
         "colab_type": "code",
         "colab": {
           "base_uri": "https://localhost:8080/",
-          "height": 866
+          "height": 868
         },
         "outputId": "c1907006-b9e5-4a0e-d719-8dfbaf71e1e7"
       },
